syntax = "proto3";
package cms.admin;

service Admin {
  rpc GetAllSchemas(AdminRequest) returns (AdminResponse);
  rpc GetById(AdminRequest) returns (AdminResponse);
  rpc CreateSchema(AdminRequest) returns (AdminResponse);
  rpc Toggle(AdminRequest) returns (AdminResponse);
  rpc EditSchema(AdminRequest) returns (AdminResponse);
  rpc DeleteSchema(AdminRequest) returns (AdminResponse);
  rpc GetDocuments(AdminRequest) returns (AdminResponse);
  rpc CreateDocument(AdminRequest) returns (AdminResponse);
  rpc CreateManyDocuments(AdminRequest) returns (AdminResponse);
  rpc EditDocument(AdminRequest) returns (AdminResponse);
  rpc DeleteDocument(AdminRequest) returns (AdminResponse);
  rpc GetCustomEndpoints(AdminRequest) returns (AdminResponse);
  rpc DeleteCustomEndpoints(AdminRequest) returns (AdminResponse);
  rpc EditCustomEndpoints(AdminRequest) returns (AdminResponse);
  rpc CreateCustomEndpoints(AdminRequest) returns (AdminResponse);
}

// all admin requests accept the params,headers and context objects as stringified json
message AdminRequest {
  string params = 1;
  string headers = 2;
  string context = 3;
}
// all admin responses return their results as stringified json
message AdminResponse {
  string result = 1;
}
